force-app/main/default/objects/Yacht__c/Yacht__c.object-meta.xml
<CustomObject>
    <description>Guilet, Motor ,Boat, Sailboat</description>
    <label>Yacht</label>
    <nameField>
        <label>Yacth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yachts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>