force-app/main/default/objects/Yacht__c/fields/Arrival_Marine__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Marine__c</fullName>
    <label>Arrival Marine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>