force-app/main/default/objects/Yacht__c/fields/Bath__c.field-meta.xml
<CustomField>
    <fullName>Bath__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bath</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>