force-app/main/default/objects/Yacht__c/fields/Boat_Size__c.field-meta.xml
<CustomField>
    <fullName>Boat_Size__c</fullName>
    <label>Boat Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>