force-app/main/default/objects/Yacht__c/fields/Boat_type__c.field-meta.xml
<CustomField>
    <fullName>Boat_type__c</fullName>
    <label>Boat type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gulet</fullName>
            </value>
            <value>
                <fullName>motor boat</fullName>
            </value>
            <value>
                <fullName>sail boat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>