force-app/main/default/objects/Yacht__c/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <label>Cabin</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>