force-app/main/default/objects/Yacht__c/fields/Call_sign__c.field-meta.xml
<CustomField>
    <fullName>Call_sign__c</fullName>
    <label>Call sign</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>