force-app/main/default/objects/Yacht__c/fields/Departure_Marine__c.field-meta.xml
<CustomField>
    <fullName>Departure_Marine__c</fullName>
    <label>Departure Marine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>