force-app/main/default/objects/Yacht__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Otomatik Pilot</fullName>
            </value>
            <value>
                <fullName>VHF Radyo</fullName>
            </value>
            <value>
                <fullName>Derinlik Ölçer</fullName>
            </value>
            <value>
                <fullName>Seyir Haritası</fullName>
            </value>
            <value>
                <fullName>Buz Makinesi</fullName>
            </value>
            <value>
                <fullName>Buzdolabı</fullName>
            </value>
            <value>
                <fullName>Klima</fullName>
            </value>
            <value>
                <fullName>jokerboat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>