force-app/main/default/objects/Yacht__c/fields/isReady__c.field-meta.xml
<CustomField>
    <fullName>isReady__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReady</label>
    <type>Checkbox</type>
</CustomField>