force-app/main/default/objects/Yacht__c/fields/Latest_Coordinate_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latest_Coordinate_Latitude__c</fullName>
    <label>Latest Coordinate Latitude</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>