force-app/main/default/objects/Yacht__c/fields/Water_Sports__c.field-meta.xml
<CustomField>
    <fullName>Water_Sports__c</fullName>
    <label>Water Sports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tender boats</fullName>
            </value>
            <value>
                <fullName>Jet packs</fullName>
            </value>
            <value>
                <fullName>Dive and snorkel gear</fullName>
            </value>
            <value>
                <fullName>Seabobs</fullName>
            </value>
            <value>
                <fullName>Jetskis</fullName>
            </value>
            <value>
                <fullName>Fishrod</fullName>
            </value>
            <value>
                <fullName>kitesufing</fullName>
            </value>
            <value>
                <fullName>parasailing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>