force-app/main/default/objects/Yacht__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>